# local-media-processor

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
services/asr/: Dockerfile  pyproject.toml  requirements.txt
services/asr/app/: main.py  model.py
services/ocr/: Dockerfile
services/ocr/app/: main.py  model.py  schemas.py
services/orchestrator/: Dockerfile
services/orchestrator/app/: config.py  main.py  pipeline.py  schemas.py
services/translate/: Dockerfile
services/translate/app/: main.py  model.py  schemas.py
services/tts/: Dockerfile
services/tts/app/: main.py  model.py  schemas.py
shared/: pyproject.toml
shared/ml_contracts/: __init__.py  asr.py  ocr.py  segment.py  translate.py  tts.py
